# ChatgptAssistanse

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: errors.rs  main.rs  models.rs  routes.rs
src/handlers/: chat_handler.rs  mod.rs
src/services/: mod.rs  openai_service.rs
